--- a/src/pages/digital-garden/index.astro
+++ b/src/pages/digital-garden/index.astro
@@ -14,7 +14,7 @@ import BaseLayout from '../../layouts/BaseLayout.astro';
     <div class="grid md:grid-cols-1 gap-3 mt-10">
       <a class="digital-garden-link font-md" href="/portfolio/">
         <div>
-          <img src="/images/flowers/flowers-row.svg" alt="flowers" class="flower-icon">
+          <img src="/images/flowers/flowers-row-1.svg" alt="flowers" class="flower-icon">
           <p class="font-bold">Portfolio</p>
         </div>
       </a>
@@ -23,37 +23,39 @@ import BaseLayout from '../../layouts/BaseLayout.astro';
     <div class="grid md:grid-cols-2 gap-3 mt-10">
       <a class="digital-garden-link font-md" href="/blog-posts/">
         <div>
-          <img src="/images/flowers/flowers-row.svg" alt="flowers" class="flower-icon">
+          <img src="/images/flowers/flowers-row-1.svg" alt="flowers" class="flower-icon">
           <p class="font-bold">Blog</p>
         </div>
       </a>
       <a class="digital-garden-link" href="/digital-garden/recipes/">
         <div>
-          <img src="/images/flowers/flowers-row.svg" alt="flowers" class="flower-icon">
+          <img src="/images/flowers/flowers-row-2.svg" alt="flowers" class="flower-icon">
           <p>Recipes</p>
         </div>
       </a>
 
       <a class="digital-garden-link" href="/digital-garden/gaming/">
         <div>
-          <img src="/images/flowers/flowers-row.svg" alt="flowers" class="flower-icon">
+          <img src="/images/flowers/flowers-row-2.svg" alt="flowers" class="flower-icon">
           <p>Gaming</p>
         </div>
       </a>
       <a class="digital-garden-link" href="/digital-garden/reading/">
         <div>
-          <img src="/images/flowers/flowers-row.svg" alt="flowers" class="flower-icon">
+          <img src="/images/flowers/flowers-row-1.svg" alt="flowers" class="flower-icon">
           <p>Reading</p>
         </div>
       </a>
 
-      <a class="digital-garden-link-disabled" aria-disabled>
+      <a class="digital-garden-link" href="/digital-garden/listening/">
         <div>
+          <img src="/images/flowers/flowers-row-1.svg" alt="flowers" class="flower-icon">
           <p>Listening</p>
         </div>
       </a>
       <a class="digital-garden-link-disabled" aria-disabled>
         <div>
+          <!-- <img src="/images/flowers/flowers-row-2.svg" alt="flowers" class="flower-icon"> -->
           <p>Watching</p>
         </div>
       </a>
