--- a/src/pages/digital-garden/listening/index.astro
+++ b/src/pages/digital-garden/listening/index.astro
@@ -6,13 +6,40 @@ import BaseLayout from '../../../layouts/BaseLayout.astro';
   <div class="container">
     <div class="row">
       <div class="col">
-        <h1 class="text-2xl font-bold">Listening</h1>
-        <p>Welcome to my listening section! Here you'll find music I'm currently listening to and any recommendations.</p>
+        <h1 class="text-2xl font-bold text-center">What am I listening to?</h1>
       </div>
     </div>
     
     <div class="row mt-4">
+      <div class="grid md:grid-cols-2 mb-5">
+        <iframe data-testid="embed-iframe-song" style="border-radius:12px" 
+                src="https://open.spotify.com/embed/track/6gqTgtJ3aBDrWE9wrCe7L6?utm_source=generator&theme=0" 
+                width="100%" height="152" class="m-auto mr-2"
+                allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" 
+                loading="lazy">
+        </iframe>
 
-    </div>
+        <div class="p-3 text-xs text-left">
+          <h2 class="font-semibold">Currently obsessed with...</h2>
+          <p>I'm currently obsessed with <em>The Song of Orpheus</em> by Ruari O'Connor.</p>
+          <p>This song draws from Greek mythology and is a beautiful piece of music; it is sung in greek and I <i>cannot</i> stop listening to it.</p>
+        </div>
+      </div>
+
+      <hr />
+
+      <div class="grid md:grid-cols-2 mt-5">
+        <div class="p-3 text-xs text-right">
+          <h2 class="font-semibold">If you need a laugh...</h2>
+          <p>Check out <em>Toni and Ryan</em>. I've been an avid listener for years, and they never cease to make me laugh, a fantastic podcast especially when you need an uplift.</p>
+        </div>
+
+        <iframe data-testid="embed-iframe-podcast" style="border-radius:12px" 
+                src="https://open.spotify.com/embed/show/5OzkclFjD6iAjtAuo7aIYt?utm_source=generator&theme=0" 
+                width="100%" height="152" 
+                allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" 
+                loading="lazy">
+        </iframe>
+      </div>
   </div>
 </BaseLayout>
