--- a/src/pages/digital-garden/listening/index.astro
+++ b/src/pages/digital-garden/listening/index.astro
@@ -11,35 +11,37 @@ import BaseLayout from '../../../layouts/BaseLayout.astro';
     </div>
     
     <div class="row mt-4">
-      <div class="grid md:grid-cols-2 mb-5">
-        <iframe data-testid="embed-iframe-song" style="border-radius:12px" 
+      <div class="grid md:grid-cols-2 mb-5 border rounded-lg">
+        <div class="flex justify-end">
+          <iframe data-testid="embed-iframe-song" style="border-radius:12px" 
                 src="https://open.spotify.com/embed/track/6gqTgtJ3aBDrWE9wrCe7L6?utm_source=generator&theme=0" 
-                width="100%" height="152" class="m-auto mr-2"
+                width="100%" height="152" class="spotify-widget"
                 allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" 
                 loading="lazy">
-        </iframe>
+          </iframe>
+        </div>       
 
-        <div class="p-3 text-xs text-left">
+        <div class="p-3 text-xs text-left my-auto">
           <h2 class="font-semibold">Currently obsessed with...</h2>
           <p>I'm currently obsessed with <em>The Song of Orpheus</em> by Ruari O'Connor.</p>
           <p>This song draws from Greek mythology and is a beautiful piece of music; it is sung in greek and I <i>cannot</i> stop listening to it.</p>
         </div>
       </div>
 
-      <hr />
-
-      <div class="grid md:grid-cols-2 mt-5">
-        <div class="p-3 text-xs text-right">
+      <div class="grid md:grid-cols-2 mt-5 border rounded-lg">
+        <div class="p-3 text-xs text-right my-auto">
           <h2 class="font-semibold">If you need a laugh...</h2>
           <p>Check out <em>Toni and Ryan</em>. I've been an avid listener for years, and they never cease to make me laugh, a fantastic podcast especially when you need an uplift.</p>
         </div>
 
-        <iframe data-testid="embed-iframe-podcast" style="border-radius:12px" 
-                src="https://open.spotify.com/embed/show/5OzkclFjD6iAjtAuo7aIYt?utm_source=generator&theme=0" 
-                width="100%" height="152" 
-                allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" 
-                loading="lazy">
-        </iframe>
+        <div class="flex justify-start">
+          <iframe data-testid="embed-iframe-podcast" style="border-radius:12px" 
+                  src="https://open.spotify.com/embed/show/5OzkclFjD6iAjtAuo7aIYt?utm_source=generator&theme=0" 
+                  width="100%" height="152" class="spotify-widget"
+                  allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" 
+                  loading="lazy">
+          </iframe>
+        </div>
       </div>
   </div>
 </BaseLayout>
